--- a/templates/first.html
+++ b/templates/first.html
@@ -6,12 +6,12 @@ Dear customer,</br>We detected an unusual login attempt on your SecureBank accou
 <br>
 
 Location: India<br>
-Time: [Date and Time]<br><br>
+Time: 10|1|2025, 7:30am<br><br>
 
 For your security, we have temporarily restricted your account access. To regain access, please verify your account details within 24 hours.<br><br>
 
 Click below to verify:
-Verify My Account
+<a HREF = >"Verify My Account"</a>
 
 If you do not verify your account, it will be permanently locked.
 
