lots of changes

--- a/templates/first.html
+++ b/templates/first.html
@@ -2,22 +2,22 @@
     <body>
         
 
-Dear customer,</br>We detected an unusual login attempt on your SecureBank account from a new device.
+<p>Dear customer,</br>We detected an unusual login attempt on your SecureBank account from a new device.</p>
 <br>
 
-Location: India<br>
-Time: 10|1|2025, 7:30am<br><br>
+<p>Location: India<br></p>
+<p>Time: 10|1|2025, 7:30am<br><br></p>
 
-For your security, we have temporarily restricted your account access. To regain access, please verify your account details within 24 hours.<br><br>
+<p>For your security, we have temporarily restricted your account access. To regain access, please verify your account details within 24 hours.<br><br></p>
 
-Click below to verify:
-<a HREF = >"Verify My Account"</a>
+<p>Click below to verify:</p>
+<p><a href="https://sites.google.com/view/code-cadets/home" >"Verify My Account"</a></p>
 
-If you do not verify your account, it will be permanently locked.
+<p>If you do not verify your account, it will be permanently locked.</p>
 
-Thank you for choosing SecureBank.<br><br>
+<p>Thank you for choosing SecureBank.<br><br></p>
 
-Sincerely,
-SecureBank Team
+<p>Sincerely,</p>
+<p>SecureBank Team</p>
     </body>
 </html>
