--- a/templates/first.html
+++ b/templates/first.html
@@ -10,8 +10,8 @@
 
 <p>For your security, we have temporarily restricted your account access. To regain access, please verify your account details within 24 hours.<br><br></p>
 
-<p>Click below to verify:</p>
-<p><a href="https://sites.google.com/view/code-cadets/home" >"Verify My Account"</a></p>
+Click below to verify:
+<a HREF = "https://sites.google.com/view/code-cadets/home"> Verify My Account </a>
 
 <p>If you do not verify your account, it will be permanently locked.</p>
 
